# AndroidBazelDemo

./: .bazelversion  WORKSPACE.bazel  bazel-bin  bazel-out  bazel-testlogs  bazel-tutorial  functions.bzl
.aswb/: .bazelproject
src/main/: BUILD.bazel
src/main/java/com/example/bazel/: BUILD.bazel  Foo.java  MainActivity.java
src/main/java/common/calculator/: BUILD.bazel  IntCalculator.kt
src/main/java/snazhmudinov/lib/bar/: BUILD.bazel  Bar.java
